# c3pzero

./: .gitattributes  .gitignore  README.md  c3pzero.repos  c3pzero_ssh.repos  docker-compose.yaml
.docker/: Dockerfile  cyclonedds_localhost.xml  ros_entrypoint.sh
c300/: README.md
c300/c300_bringup/: CMakeLists.txt  package.xml
c300/c300_bringup/config/: c300_controllers.yaml  c300_gz_controllers.yaml  c300_isaac_controllers.yaml  urg_node_ethernet.yaml
c300/c300_bringup/launch/: c300_sim.launch.py  gazebo_c300.launch.py  hardware_c300_launch.py  isaac_c300.launch.py  urg_node_launch.py
c300/c300_bringup/rviz/: bringup_config.rviz  c300.rviz
c300/c300_bringup/worlds/: depot.sdf
c300/c300_description/: CMakeLists.txt  package.xml
c300/c300_description/launch/: view_base_urdf.launch.py
c300/c300_description/urdf/: c300.gazebo.xacro  c300.ros2_control.xacro  c300.urdf.xacro  c300_base.gazebo.xacro  c300_base.urdf  c300_base.urdf.xacro  c300_macro.xacro  c300_transmission_macro.xacro  hokuyo.gazebo.xacro  hokuyo_uam05lp.urdf.xacro
c300/c300_description/usd/: README.md  UAM-05LP.usd  c300.py  c300_ros.usd  isaac_c300.py  python.sh
c300/c300_driver/: package.xml  setup.cfg  setup.py
c300/c300_driver/c300_driver/: diff_drive_odom.py  roboclaw_3.py  twist2roboclaw.py
c300/c300_driver/config/: f710.config.yaml
c300/c300_driver/launch/: driver.launch.py  teleop.launch.py
c300/c300_driver/test/: test_copyright.py
c300/c300_navigation/: CMakeLists.txt  README.md  package.xml
c300/c300_navigation/launch/: navigation.launch.py
c300/c300_navigation/map/: depot.pgm  depot.yaml  empty_world.yaml  house.pgm  house.yaml  isaac_warehouse.pgm  isaac_warehouse.yaml  simple_room.pgm  simple_room.yaml
c300/c300_navigation/params/: nav2_params.yaml  nav2_params_mppi.yaml
c300/c300_navigation/rviz/: navigation.rviz
c3pzero/: README.md
c3pzero/c3pzero_bringup/: CMakeLists.txt  package.xml
c3pzero/c3pzero_bringup/config/: c3pzero_gz_controllers.yaml  c3pzero_hardware_controllers.yaml  c3pzero_isaac_controllers.yaml
c3pzero/c3pzero_bringup/launch/: gazebo_c3pzero.launch.py  isaac_c3pzero.launch.py
c3pzero/c3pzero_bringup/rviz/: bringup_config.rviz  c3pzero.rviz
c3pzero/c3pzero_description/: CMakeLists.txt  package.xml
c3pzero/c3pzero_description/config/: initial_positions.yaml
c3pzero/c3pzero_description/launch/: view_urdf.launch.xml
c3pzero/c3pzero_description/rviz/: robot_urdf.rviz  view_urdf.rviz
c3pzero/c3pzero_description/urdf/: c3pzero.gazebo.xacro  c3pzero.urdf.xacro  c3pzero_kinova_gen3.gazebo.xacro  c3pzero_kinova_gen3.xacro  wrist_realsense.urdf.xacro
c3pzero/c3pzero_description/usd/: README.md  Test.usda  c3pzero_container.py  cabinet.usd  create_objs.py  isaac_c3pzero.py  python.sh  simple_room.usd  test_cubes.usd
c3pzero/c3pzero_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
c3pzero/c3pzero_moveit_config/config/: c3pzero.srdf.xacro  c3pzero_kinova_gen3.srdf  (+9 more)
c3pzero_bringup/: CMakeLists.txt  README.md  package.xml
c3pzero_bringup/config/: c3pzero_controllers.yaml
c3pzero_bringup/launch/: c3pzero_sim.launch.py
c3pzero_bringup/rviz/: bringup_config.rviz
c3pzero_description/: CMakeLists.txt  README.md  package.xml
c3pzero_description/launch/: view_robot_urdf.launch.py
c3pzero_description/urdf/: c3pzero_kinova_gen3.xacro
doc/: developer.md  installation.md  setup.md  user.md
kbot/: README.md  instanceable_meshes.usd
kbot/kbot_description/: CMakeLists.txt  package.xml
kbot/kbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+51 files in other folders)
